syntax = "proto3";

package api;

import "basecoat_transport.proto";

service Basecoat {
  // Authentication routes
  rpc CreateAPIToken(CreateAPITokenRequest) returns (CreateAPITokenResponse);

  // System routes
  rpc GetSystemInfo(GetSystemInfoRequest) returns (GetSystemInfoResponse);

  // Formula routes
  rpc GetFormula(GetFormulaRequest) returns (GetFormulaResponse);
  rpc SearchFormulas(SearchFormulasRequest) returns (SearchFormulasResponse);
  rpc ListFormulas(ListFormulasRequest) returns (ListFormulasResponse);
  rpc CreateFormula(CreateFormulaRequest) returns (CreateFormulaResponse);
  rpc UpdateFormula(UpdateFormulaRequest) returns (UpdateFormulaResponse);
  rpc DeleteFormula(DeleteFormulaRequest) returns (DeleteFormulaResponse);

  // Job routes
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
  rpc SearchJobs(SearchJobsRequest) returns (SearchJobsResponse);
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
  rpc UpdateJob(UpdateJobRequest) returns (UpdateJobResponse);
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse);
}
